crates/ruau/tests/compile/checked_module_private.rs
fn main() {
    let _ = std::mem::size_of::<ruau::checked::CheckedHost>();
}
